Added dark mode for properties window
Added dark mode for properties window